Actualización del index.html
Se agregó un lorem ipsum

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Hola</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis impedit aliquid eos ex veritatis dignissimos quas repellat. Modi quam recusandae velit ipsam cupiditate, commodi temporibus, iure error delectus architecto aperiam.</p>
 </body>
 
 </html>
