Creación de la galería de imágenes
Se crea el html y css para la galería de imágenes

--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>Hola</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis impedit aliquid eos ex veritatis dignissimos quas repellat. Modi quam recusandae velit ipsam cupiditate, commodi temporibus, iure error delectus architecto aperiam.</p>
+    <section class="galeria">
+        <div class="contenedor-imagen">
+            <img src="imgs/espacio.jpg" alt="">
+        </div>
+
+        <div class="contenedor-imagen">
+            <img src="imgs/espacio2.jpg" alt="">
+        </div>
+
+        <div class="contenedor-imagen">
+            <img src="imgs/espacio3.jpeg" alt="">
+        </div>
+
+        <div class="contenedor-imagen">
+            <img src="imgs/espacio4.jpg" alt="">
+        </div>
+
+        <div class="contenedor-imagen">
+            <img src="imgs/espacio5.jpg" alt="">
+        </div>
+
+        <div class="contenedor-imagen">
+            <img src="imgs/espacio6.jpg" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
