Se agrega el lazy load a las imágenes

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 <body>
     <section class="galeria">
         <div class="contenedor-imagen">
-            <img src="imgs/espacio.jpg" alt="">
+            <img src="imgs/espacio.jpg" alt="" loading="lazy">
         </div>
 
         <div class="contenedor-imagen">
-            <img src="imgs/espacio2.jpg" alt="">
+            <img src="imgs/espacio2.jpg" alt="" loading="lazy">
         </div>
 
         <div class="contenedor-imagen">
-            <img src="imgs/espacio3.jpeg" alt="">
+            <img src="imgs/espacio3.jpeg" alt="" loading="lazy">
         </div>
 
         <div class="contenedor-imagen">
-            <img src="imgs/espacio4.jpg" alt="">
+            <img src="imgs/espacio4.jpg" alt="" loading="lazy">
         </div>
 
         <div class="contenedor-imagen">
-            <img src="imgs/espacio5.jpg" alt="">
+            <img src="imgs/espacio5.jpg" alt="" loading="lazy">
         </div>
 
         <div class="contenedor-imagen">
-            <img src="imgs/espacio6.jpg" alt="">
+            <img src="imgs/espacio6.jpg" alt="" loading="lazy">
         </div>
     </section>
 </body>
