Cambios en index.html
Se realizan ajustes para el posicionamiento

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
-    <title>Document</title>
+    <meta name="description" content="Galería de imágenes del espacio interestelar tomadas por usuarios de la aplicación">
+    <title>Sistema solar | galería</title>
 </head>
 
 <body>
+    <h1>Galería</h1>
     <section class="galeria">
         <div class="contenedor-imagen">
             <img src="imgs/espacio.jpg" alt="" loading="lazy">
