Modificación de seo
Se agregan los archivos robots.txt y sitemap.xml

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <meta name="description" content="Galería de imágenes del espacio interestelar tomadas por usuarios de la aplicación">
-    <title>Sistema solar | galería</title>
+    <title>Sistema solar | galería de imágenes</title>
 </head>
 
 <body>
