--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -13,29 +13,30 @@
 
 <body>
     <h1>Galería</h1>
+    <p>Galería de imágenes del sistema solar, tomadas por nuestros usuarios</p>
     <section class="galeria">
         <div class="contenedor-imagen">
-            <img src="imgs/espacio.jpg" alt="" loading="lazy">
+            <img src="imgs/espacio.jpg" alt="Imagen de espacio 1" loading="lazy">
         </div>
 
         <div class="contenedor-imagen">
-            <img src="imgs/espacio2.jpg" alt="" loading="lazy">
+            <img src="imgs/espacio2.jpg" alt="Imagen de espacio 2" loading="lazy">
         </div>
 
         <div class="contenedor-imagen">
-            <img src="imgs/espacio3.jpeg" alt="" loading="lazy">
+            <img src="imgs/espacio3.jpeg" alt="Imagen de espacio 3" loading="lazy">
         </div>
 
         <div class="contenedor-imagen">
-            <img src="imgs/espacio4.jpg" alt="" loading="lazy">
+            <img src="imgs/espacio4.jpg" alt="Imagen de espacio 4" loading="lazy">
         </div>
 
         <div class="contenedor-imagen">
-            <img src="imgs/espacio5.jpg" alt="" loading="lazy">
+            <img src="imgs/espacio5.jpg" alt="Imagen de espacio 5" loading="lazy">
         </div>
 
         <div class="contenedor-imagen">
-            <img src="imgs/espacio6.jpg" alt="" loading="lazy">
+            <img src="imgs/espacio6.jpg" alt="Imagen de espacio 6" loading="lazy">
         </div>
     </section>
 </body>
